--- a/project/punto1/index.html
+++ b/project/punto1/index.html
@@ -22,7 +22,7 @@
           </ul>
         </div>
         <div id="middle">
-          <div id="left-column">
+          <div id="left-column" style="visibility: hidden;">
             <h3>Header</h3>
             <ul class="nav">
               <li><a href="#">Lorem Ipsum dollar</a></li>
@@ -34,9 +34,9 @@
             </ul>
             <a href="#" class="link">Link here</a> <a href="#" class="link">Link here</a> </div>
           <div id="center-column">
-            <div class="top-bar"> <a href="#" class="button">ADD NEW </a>
-              <h1>Contents</h1>
-              <div class="breadcrumbs"><a href="#">Homepage</a> / <a href="#">Contents</a></div>
+            <div class="top-bar"> 
+              <h1>Buscador de planetas 5000</h1>
+              <div class="breadcrumbs" style="visibility: hidden;"><a href="#">Homepage</a> / <a href="#">Contents</a></div>
             </div>
             <br />
             <div class="select-bar">
@@ -46,8 +46,8 @@
                     <input type="submit" value="Buscar">
                 </form>
             </div>
-            <div class="table"> <img src="img/bg-th-left.gif" width="8" height="7" alt="" class="left" /> <img src="img/bg-th-right.gif" width="7" height="7" alt="" class="right" />
-              <table class="listing" cellpadding="0" cellspacing="0">
+            <div class="table" style="visibility: hidden;"> <img src="img/bg-th-left.gif" width="8" height="7" alt="" class="left" /> <img src="img/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+              <table class="listing" cellpadding="0" cellspacing="0" style="visibility: hidden;">
                 <tr>
                   <th class="first" width="177">Header Here</th>
                   <th>Header</th>
@@ -135,7 +135,7 @@
                 </select>
               </div>
             </div>
-            <div class="table"> <img src="img/bg-th-left.gif" width="8" height="7" alt="" class="left" /> <img src="img/bg-th-right.gif" width="7" height="7" alt="" class="right" />
+            <div class="table" style="visibility: hidden;"> <img src="img/bg-th-left.gif" width="8" height="7" alt="" class="left" /> <img src="img/bg-th-right.gif" width="7" height="7" alt="" class="right" />
               <table class="listing form" cellpadding="0" cellspacing="0">
                 <tr>
                   <th class="full" colspan="2">Header Here</th>
@@ -161,7 +161,7 @@
             </div>
           </div>
           <div id="right-column"> <strong class="h">INFO</strong>
-            <div class="box">Detect and eliminate viruses and Trojan horses, even new and unknown ones. Detect and eliminate viruses and Trojan horses, even new and </div>
+            <div class="box">Esta pagina solo es para buscar un elemento no puede hacer más que eso... </div>
           </div>
         </div>
         <div id="footer"></div>
