--- a/project/punto4/static/verfiReportFirst.html
+++ b/project/punto4/static/verfiReportFirst.html
@@ -15,7 +15,7 @@
             <li><span><span><a href="../index.html">Buscador de planetas</a></span></span></li>
             <li class="active"><span><span>Verificar primer reporte de sistema solar</span></span></li>
             <li><span><span><a href="./planetas_habitables.html">Verificar planetas habitables</a></span></span></li>
-            <li><span><span><a href="#">Settings</a></span></span></li>
+            <li><span><span><a href="./GravedadPlaneta.html">Calcular Gravedad de planetas(aproximada...)</a></span></span></li>
             <li><span><span><a href="#">Statistics</a></span></span></li>
             <li><span><span><a href="#">Design</a></span></span></li>
             <li><span><span><a href="#">Contents</a></span></span></li>
