feat: :sparkles: Se completo el punto 4

--- a/project/punto4/index.html
+++ b/project/punto4/index.html
@@ -15,7 +15,7 @@
             <li class="active"><span><span>Buscador de planetas</span></span></li>
             <li><span><span><a href="./static/verfiReportFirst.html">Verificar primer reporte de sistema solar</a></span></span></li>
             <li><span><span><a href="./static/planetas_habitables.html">Verificar planetas habitables</a></span></span></li>
-            <li><span><span><a href="./static//GravedadPlaneta.html">Calcular Gravedad de planetas(aproximada...)</a></span></span></li>
+            <li><span><span><a href="./static/GravedadPlaneta.html">Calcular Gravedad de planetas(aproximada...)</a></span></span></li>
             <li><span><span><a href="#">Statistics</a></span></span></li>
             <li><span><span><a href="#">Design</a></span></span></li>
             <li><span><span><a href="#">Contents</a></span></span></li>
