--- a/project/punto4/static/GravedadPlaneta.html
+++ b/project/punto4/static/GravedadPlaneta.html
@@ -1,35 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../Css/style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <!-- Compiled and minified CSS -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+   <!-- Compiled and minified JavaScript -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   <link rel="stylesheet" href="../Css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
 </head>
 <body>
  
-    <div id="main">
-        <div id="header"> <a href="#" class="logo"></a>
-          <ul id="top-navigation">
-            <li><span><span><a href="../index.html">Buscador de planetas</a></span></span></li>
-            <li><span><span><a href="./verfiReportFirst.html">Verificar primer reporte de sistema solar</a></span></span></li>
-            <li><span><span><a href="./verfiReportFirst.html">Verificar planetas habitables</a></span></span></li>
-            <li class="active"><span><span>Calcular Gravedad de planetas(aproximada...)</span></span></li>
-            <li><span><span><a href="#">Statistics</a></span></span></li>
-            <li><span><span><a href="#">Design</a></span></span></li>
-            <li><span><span><a href="#">Contents</a></span></span></li>
-          </ul>
-        </div>
-        <div id="middle">
-        <form action="../Scripts/Logic/Logic.php" method="POST">
-         <button class="green-button" name="habitables" value="1" type="submit">Buscar planetas habitables</button>
-         <button class="red-button"   name="habitables" value="2" type="submit">Buscar planetas NO habitables</button>
-         <button class="blue-button"  name="habitables" value="3" type="submit">Buscar planetas en tu base de datos</button>
+  <div id="main">
+    <div id="header"> <a href="#" class="logo"></a>
+      <ul id="top-navigation">
+        <li><span><span><a href="../index.html">Buscador de planetas</a></span></span></li>
+        <li><span><span><a href="./verfiReportFirst.html">Verificar primer reporte de sistema solar</a></span></span></li>
+        <li><span><span><a href="./planetas_habitables.html">Verificar planetas habitables</a></span></span></li>
+        <li class="active"><span><span>Calcular Gravedad de planetas(aproximada...)</a></span></span></li>
+        <li><span><span><a href="#">Statistics</a></span></span></li>
+        <li><span><span><a href="#">Design</a></span></span></li>
+        <li><span><span><a href="#">Contents</a></span></span></li>
+      </ul>
+    </div>
+    <div id="middle">
+      <div class="row">
+        <form class="col s12" action="../Scripts/Logic/Logic.php" method="POST">
+          <div class="row">
+            <div class="input-field col s12">
+                <label for="PlanetaG">Ingresa el nombre o el id del planeta</label><br>
+                <input type="text" name="PlanetaG">
+                <input type="submit" value="Buscar" class="waves-effect waves-light btn">
+            </div>
+          </div>
         </form>
-        </div>
-        <div id="footer"></div>
       </div>
+    </div>
+    <div id="footer"></div>
+  </div>
       
 </body>
 </html>
