feat: :sparkles: Se "completo" el maquetado basico del DBA
Se completo y agrego casi todo lo necesario para administracion de la base de datos(Solo maquetacion)

--- a/full-stackApp/front-end/index.html
+++ b/full-stackApp/front-end/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
 	<link rel="stylesheet" href="style.css">
 	<script src="main.js" async></script>
-	<script src="app.js" defer type="module"></script>
 	<title>AdminSite</title>
 </head>
+
 <body>
 	<!-- SIDEBAR -->
 	<section id="sidebar">
-		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> AdminSite</a>
+		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> HOla mundoi</a>
 		<ul class="side-menu">
-			<li><a href="#" class="active"><i class='bx bxs-dashboard icon' ></i> Dashboard</a></li>
-			<li class="divider" data-text="main">Main</li>
-			<li>
-				<a href="#"><i class='bx bxs-inbox icon' ></i> Elements <i class='bx bx-chevron-right icon-right' ></i></a>
-				<ul class="side-dropdown">
-					<li><a href="#">Alert</a></li>
-					<li><a href="#">Badges</a></li>
-					<li><a href="#">Breadcrumbs</a></li>
-					<li><a href="#">Button</a></li>
-				</ul>
-			</li>
-			<li><a href="#"><i class='bx bxs-chart icon' ></i> Charts</a></li>
-			<li><a href="#"><i class='bx bxs-widget icon' ></i> Widgets</a></li>
+			<li><a href="#" class="active"><i class='bx bxs-dashboard icon'></i> Dashboard</a></li>
+			<li class="divider" data-text="Administrador DB">Administrador de bases de datos</li>
+			<li><a href="#"><i class='bx bxs-graduation icon'></i> academic_area</a></li>
+			<li><a href="#"><i class='bx bxs-cog icon'></i> admin_area</a></li>
+			<li><a href="#"><i class='bx bxs-cube icon'></i> areas</a></li>
+			<li><a href="#"><i class='bx bxs-pencil icon'></i> campers</a></li>
+			<li><a href="#"><i class='bx bx-intersect icon'></i> chapters</a></li>
+			<li><a href="#"><i class='bx bxs-business icon'></i> cities</a></li>
+			<li><a href="#"><i class='bx bxs-contact icon'></i> contact_info</a></li>
+			<li><a href="#"><i class='bx bxs-map icon'></i> countries</a></li>
+			<li><a href="#"><i class='bx bxs-pen icon'></i>design_area </a></li>
+			<li><a href="#"><i class='bx bxs-ambulance icon'></i>emergency_contact </a></li>
 			<li class="divider" data-text="table and forms">Table and forms</li>
-			<li><a href="#"><i class='bx bx-table icon' ></i> Tables</a></li>
 			<li>
-				<a href="#"><i class='bx bxs-notepad icon' ></i> Forms <i class='bx bx-chevron-right icon-right' ></i></a>
+				<a href="#"><i class='bx bxs-notepad icon'></i> Forms <i class='bx bx-chevron-right icon-right'></i></a>
 				<ul class="side-dropdown">
-					<li><a href="#">Basic</a></li>
-					<li><a href="#">Select</a></li>
-					<li><a href="#">Checkbox</a></li>
-					<li><a href="#">Radio</a></li>
+					<li><a href="#">academic_area</a></li>
+					<li><a href="#">admin_area</a></li>
+					<li><a href="#">areas</a></li>
+					<li><a href="#">campers</a></li>
+					<li><a href="#">chapters</a></li>
+					<li><a href="#">cities</a></li>
+					<li><a href="#">contact_info</a></li>
+					<li><a href="#">countries</a></li>
+					<li><a href="#">esign_area </a></li>
+					<li><a href="#">emergency_contact </a></li>
 				</ul>
 			</li>
 		</ul>
@@ -46,18 +51,19 @@
 	<section id="content">
 		<!-- NAVBAR -->
 		<nav>
-			<i class='bx bx-menu toggle-sidebar' ></i>
+			<i class='bx bx-menu toggle-sidebar'></i>
 			<form action="#">
-				
+
 			</form>
-			
+
 			<span class="divider"></span>
 			<div class="profile">
-				<img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
+				<img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
+					alt="">
 				<ul class="profile-link">
-					<li><a href="#"><i class='bx bxs-user-circle icon' ></i> Profile</a></li>
-					<li><a href="#"><i class='bx bxs-cog' ></i> Settings</a></li>
-					<li><a href="#"><i class='bx bxs-log-out-circle' ></i> Logout</a></li>
+					<li><a href="#"><i class='bx bxs-user-circle icon'></i> Profile</a></li>
+					<li><a href="#"><i class='bx bxs-cog'></i> Settings</a></li>
+					<li><a href="#"><i class='bx bxs-log-out-circle'></i> Logout</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -71,65 +77,27 @@
 				<li class="divider">/</li>
 				<li><a href="#" class="active">Dashboard</a></li>
 			</ul>
-			<div class="info-data">
-				<div class="card">
-					<div class="head">
-						<div>
-							<h2>1500</h2>
-							<p>Traffic</p>
-						</div>
-						<i class='bx bx-trending-up icon' ></i>
-					</div>
-					<span class="progress" data-value="40%"></span>
-					<span class="label">40%</span>
-				</div>
-				<div class="card">
-					<div class="head">
-						<div>
-							<h2>234</h2>
-							<p>Sales</p>
-						</div>
-						<i class='bx bx-trending-down icon down' ></i>
-					</div>
-					<span class="progress" data-value="60%"></span>
-					<span class="label">60%</span>
-				</div>
-				<div class="card">
-					<div class="head">
-						<div>
-							<h2>465</h2>
-							<p>Pageviews</p>
-						</div>
-						<i class='bx bx-trending-up icon' ></i>
-					</div>
-					<span class="progress" data-value="30%"></span>
-					<span class="label">30%</span>
-				</div>
-				<div class="card">
-					<div class="head">
-						<div>
-							<h2>235</h2>
-							<p>Visitors</p>
-						</div>
-						<i class='bx bx-trending-up icon' ></i>
-					</div>
-					<span class="progress" data-value="80%"></span>
-					<span class="label">80%</span>
-				</div>
-			</div>
 			<div class="data">
 				<div class="content-data">
 					<div class="head">
-						<h3>Sales Report</h3>
+						<h3>main entrance</h3>
 					</div>
 					<!-- conteido -->
-					<h1>Hola Mundo</h1>
+					<h4>Bienvenido!!!</h4>
+					<br>
+					<p>Esto es un administrador de base de datos (DBA) es un profesional responsable del diseño,
+						implementación, mantenimiento y seguridad de las bases de datos. Los DBA trabajan con una amplia
+						variedad de bases de datos, incluidas bases de datos relacionales, bases de datos NoSQL y bases
+						de datos basadas en la nube.</p>
+
 				</div>
-			
+
 			</div>
 		</main>
 		<!-- MAIN -->
 	</section>
 	<!-- NAVBAR -->
+	<script src="app.js" defer type="module"></script>
 </body>
+
 </html>
