--- a/full-stackApp/front-end/index.html
+++ b/full-stackApp/front-end/index.html
@@ -5,6 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 	<link rel="stylesheet" href="style.css">
 	<script src="main.js" async></script>
 	<title>AdminSite</title>
@@ -13,7 +14,7 @@
 <body>
 	<!-- SIDEBAR -->
 	<section id="sidebar">
-		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> HOla mundoi</a>
+		<a href="#" class="brand"><i class='bx bxs-data icon'></i>phpMyAdmin</a>
 		<ul class="side-menu">
 			<li><a href="#" class="active"><i class='bx bxs-dashboard icon'></i> Dashboard</a></li>
 			<li class="divider" data-text="Administrador DB">Administrador de bases de datos</li>
@@ -70,7 +71,7 @@
 		<!-- NAVBAR -->
 
 		<!-- MAIN -->
-		<main>
+		<main id = "main">
 			<h1 class="title">Dashboard</h1>
 			<ul class="breadcrumbs">
 				<li><a href="#">Home</a></li>
@@ -97,6 +98,8 @@
 		<!-- MAIN -->
 	</section>
 	<!-- NAVBAR -->
+	<script src="./components/sidebar.js" defer type="module"></script>
+	<script src="./components/panel.js" defer type="module"></script>
 	<script src="app.js" defer type="module"></script>
 </body>
 
